--- a/styl/style.css
+++ b/styl/style.css
@@ -392,3 +392,23 @@ font-weight: 600;
 line-height: 23px;
 border: none;
 }
+/*footer*/
+.footer{
+    display: flex;
+    width: 1440px;
+height: 100px;
+padding: 32px 150px 32px 150px;
+gap: 600px;
+border-radius: 16px;
+
+background: rgba(13, 19, 33, 0.03);
+}
+nav>ul{
+    display: flex;
+    gap: 20px;
+}
+nav>ul>li{
+    list-style: none;
+}
+
+
